<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_text_guest_login"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/how_much_old_are_u"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/age_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/age_edit_text_hint"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/what_is_your_name"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/name_edit_text_hint" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttonshape"
        android:text="@string/send_age_name_button"
        android:textColor="@color/buttonColor" />
</LinearLayout>